<resources>
    <string name="app_name">Github User\'s</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="location">Location</string>
    <string name="search">Search…</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="followers_detail">-</string>
    <string name="following_detail">-</string>
    <string name="repository_detail">-</string>
    <string name="menu">Language</string>
    <string name="favourite">favourite</string>
    <string name="favourites">Favourite Users</string>
    <string name="setting">Setting</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="back_button">back button</string>
    <string name="user_not_found">User not found!</string>
    <string name="empty_text">NO DATA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>