<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_more">
        <menu>
            <item
                android:id="@+id/icon_menu"
                android:title="@string/menu"
                android:icon="@drawable/ic_language"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/icon_favourite"
                android:title="@string/favourites"
                android:icon="@drawable/ic_favorites"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/icon_setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_settings"
                app:showAsAction="ifRoom" />
        </menu>

    </item>



</menu>